--- a/pset-04-wrangling.qmd
+++ b/pset-04-wrangling.qmd
@@ -10,13 +10,15 @@ In this problem set we will learn how to extract and wrangle data from the data 
 1. Get an API key from the US Census at <https://api.census.gov/data/key_signup.html>. You can't share this public key. But your code has to run on a TFs computer. Assume the TF will have a file in their working directory named `census-key.R` with the following one line of code:
 
 ```
-census_key <- "A_CENSUS_KEY_THAT_WORKS"
+census_key <- "dd06877f1e7a4ca6cde3991db610af34372632f9"
 ```
 
 Write a first line of code for your problem set that defines `census_key` by running the code in the file `census-key.R`.
 
 ```{r}
 ## Your code here
+census_key <- source("census-key.R")
+
 ```
 
 2. The [US Census API User Guide](https://www.census.gov/content/dam/Census/data/developers/api-user-guide/api-user-guide.pdf)
@@ -39,28 +41,39 @@ Hint: Print out `request` to check that the URL matches what we want.
 ```{r}
 #| message: false
 #| warning: false
+
+
 library(httr2)
-#request <- 
+request <- request(url) |>
+  req_url_query(
+    get = "POP_2020,POP_2021,NAME",
+    `for` = "state:*",
+    key = census_key$value 
+  )
+request
+
 ```
 
 3. Make a request to the US Census API using the `request` object. Save the response to and object named `response`. Check the response status of your request and make sure it was successful. You can learn about _status codes_ [here](https://en.wikipedia.org/wiki/List_of_HTTP_status_codes).
 
 
 ```{r}
-#response <- 
+response <- request |> req_perform()
+response$status_code
 ```
 
 4. Use a function from the **httr2** package to determine the content type of your response.
 
 ```{r}
 # Your code here
+resp_content_type(response)
 ```
 
 5. Use just one line of code and one function to extract the data into a matrix. 
 Hints: 1) Use the `resp_body_json` function. 2) The first row of the matrix will be the variable names and this OK as we will fix in the next exercise.
 
 ```{r}
-#population <- 
+population <- resp_body_json(response, simplifyVector = TRUE)
 ```
 
 6. Examine the `population` matrix you just created. Notice that 1) it is not tidy, 2) the column types are not what we want, and 3) the first row is a header. Convert `population` to a tidy dataset. Remove the state ID column and change the name of the column with state names to `state_name`. Add a column with state abbreviations called `state`. Make sure you assign the abbreviations for DC and PR correctly. Hint: Use the **janitor** package to make the first row the header. 
@@ -79,6 +92,26 @@ library(janitor)
   # parese all relevant colunns to numeric
   # add state abbreviations using state.abb variable
   # use case_when to add abbreviations for DC and PR
+
+population <- population |>
+  as_tibble() |>
+  row_to_names(row_number = 1) |>
+  select(-state) |>
+  rename(state_name = NAME) |>
+  pivot_longer(cols = starts_with("POP"),
+               names_to = "year",
+               values_to = "population") |>
+  mutate(
+    year = str_remove(year, "POP_"),
+    population = as.numeric(population),
+    state = case_when(
+      state_name == "District of Columbia" ~ "DC",
+      state_name == "Puerto Rico" ~ "PR",
+      TRUE ~ state.abb[match(state_name, state.name)]
+    )
+  )
+
+
 ```
 
 7. As a check, make a barplot of states' 2021 and 2022 populations. Show the state names in the y-axis ordered by population size.  Hint: You will need to use `reorder` and use `facet_wrap`.
@@ -90,6 +123,17 @@ library(janitor)
   # use geom_col to plot barplot
   # flip coordinates
   # facet by year
+
+population |>
+  ggplot(aes(x = reorder(state_name, population), 
+             y = population, 
+             fill = year)) +
+  geom_col() +
+  coord_flip() +
+  facet_wrap(~year, scales = "free_y") +
+  labs(x = "State", y = "Population", 
+       title = "US State Populations (2020–2021)")
+
 ```
 
 
@@ -109,6 +153,15 @@ library(purrr)
 url <- "https://github.com/datasciencelabs/2025/raw/refs/heads/main/data/regions.json"
 # regions <- use jsonlit JSON parser 
 # regions <- convert list to data frame. You can use map_df in purrr package 
+
+regions <- url |>
+  fromJSON() |>
+  map_dfr(~as_tibble(.x)) |>
+  rename(state_name = state) |>
+  mutate(region_name = str_replace(region_name, 
+                                   "Region VIII (Denver, CO)", 
+                                   "Region VIII"))
+
 ```
 
 9. Add a region and region name columns to the `population` data frame.
