--- a/pset-04-wrangling.qmd
+++ b/pset-04-wrangling.qmd
@@ -18,7 +18,7 @@ In this problem set we will learn how to extract and wrangle data from the data 
 1. Get an API key from the US Census at <https://api.census.gov/data/key_signup.html>. You can't share this public key. But your code has to run on a TFs computer. Assume the TF will have a file in their working directory named `census-key.R` with the following one line of code:
 
 ```
-census_key <- "dd06877f1e7a4ca6cde3991db610af34372632f9"
+census_key <- ""
 ```
 
 Write a first line of code for your problem set that defines `census_key` by running the code in the file `census-key.R`.
@@ -299,7 +299,7 @@ death <- request(deaths_url) |>
   drop_na(covid_19_deaths, end_date) |>
   summarize(state = state, death = as.numeric(covid_19_deaths), date = as.Date(end_date)) |> 
   select(state, date, death) |>
-  filter(!(state == "United States")) #|>
+  filter(!(state == "United States" | state ==  "New York City")) #|>
  # print()
 
 ```
